--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3,6 +3,12 @@
   Built on Timber v2.0.0
 ==============================================================================*/
 
+/*============== CUSTOM STYLING =========*/
+/*Nav Bar*/
+.logo img {
+  max-height: 65px;
+}
+
 /*================ Variables, theme settings, and Sass mixins from Timber ================*/
 /*================ Global | Sass Mixins ================*/
 @mixin clearfix() {
