--- a/snippets/bottom-scripts.liquid
+++ b/snippets/bottom-scripts.liquid
@@ -33,6 +33,7 @@
   {{ 'script.js' | asset_url | script_tag }}
   {{ 'mediaelement-and-player.min.js' | asset_url | script_tag }}
   {{ 'mediaelementplayer.min.js' | asset_url | script_tag }}
+  {{ 'added.js' | asset_url | script_tag }}
 	
 	<script>
     {% if resetPassword %}
