--- a/snippets/footer-index8.liquid
+++ b/snippets/footer-index8.liquid
@@ -33,7 +33,7 @@
           <div class="widget contact-info">
             {% if settings.use_footer_logo %}
             <div class="logo">
-              <a href="/"><img alt="" src="{{'footer_logo.png' | asset_url}}"></a>
+              <a href="/"><img alt="Fello Eyewear Logo" src="{{'footer_logo.png' | asset_url}} style="max-height: 65px;"></a>
             </div>
             {% endif %}
 
