--- a/snippets/header-scripts.liquid
+++ b/snippets/header-scripts.liquid
@@ -1,28 +1,36 @@
 {% include 'oldIE-js' %}
 
 {{ 'jquery-2.1.4.min.js' | asset_url | script_tag }}
-{{'jquery.themepunch.tools.min.js' | asset_url | script_tag }}
-{{'jquery.themepunch.revolution.min.js' | asset_url | script_tag }} 
-
-{{"revolution.extension.actions.min.js" | asset_url | script_tag }}
-{{"revolution.extension.carousel.min.js" | asset_url | script_tag }}
-{{"revolution.extension.kenburn.min.js" | asset_url | script_tag }}
-{{"revolution.extension.layeranimation.min.js" | asset_url | script_tag }}
-{{"revolution.extension.migration.min.js" | asset_url | script_tag }}
-{{"revolution.extension.navigation.min.js" | asset_url | script_tag }}
-{{"revolution.extension.parallax.min.js" | asset_url | script_tag }}
-{{"revolution.extension.slideanims.min.js" | asset_url | script_tag }}
-{{"revolution.extension.video.min.js" | asset_url | script_tag }}
 
 
-{{ 'option_selection.js' | shopify_asset_url | script_tag }}
-{{ "//cdn.shopify.com/s/javascripts/currencies.js" | script_tag }}
-{{ "jquery.currencies.min.js" | asset_url | script_tag }}
-{{'jquery.storageapi.min.js' | asset_url | script_tag }}
+
+<script src="{{ "jquery.themepunch.tools.min.js" | asset_url }}" async></script>
+<script src="{{ "jquery.themepunch.revolution.min.js" | asset_url }}" async></script>
+
+
+<script src="{{ "revolution.extension.actions.min.js" | asset_url }}" async></script>
+<script src="{{ "revolution.extension.carousel.min.js" | asset_url }}" async></script>
+<script src="{{ "revolution.extension.kenburn.min.js" | asset_url }}" async></script>
+<script src="{{ "revolution.extension.layeranimation.min.js" | asset_url }}" async></script>
+<script src="{{ "revolution.extension.migration.min.js" | asset_url }}" async></script>
+<script src="{{ "revolution.extension.navigation.min.js" | asset_url }}" async></script>
+<script src="{{ "revolution.extension.parallax.min.js" | asset_url }}" async></script>
+<script src="{{ "revolution.extension.slideanims.min.js" | asset_url }}" async></script>
+<script src="{{ "revolution.extension.video.min.js" | asset_url }}" async></script>
+
+
+<script src="{{ "option_selection.js" | shopify_asset_url }}" async></script>
+<script src="//cdn.shopify.com/s/javascripts/currencies.js" async></script>
+<script src="{{ "jquery.currencies.min.js" | asset_url }}" async></script>
+<script src="{{ "jquery.storageapi.min.js" | asset_url }}" async></script>
+
+
 {% if template contains 'customers' %}
 {{ 'shopify_common.js' | shopify_asset_url | script_tag }}
 {{ "customer_area.js"  | shopify_asset_url | script_tag }}
 {% endif %}
+
+
 <script type="text/javascript">
   {% if customer %}
   var is_customers = true;
