--- a/snippets/shortcode-product-fullwidth.liquid
+++ b/snippets/shortcode-product-fullwidth.liquid
@@ -21,16 +21,21 @@
 {% assign sold_out = false %}
 {% endif %}
 
+{% assign second_pair = "Black Konvoy" %}
+
 <!-- Section single product-->
 <div class="section-block-single-product2">
   <div class="container">
     <div class="block-single-product {{product_full_width_style}} row">
+
+      <!-- Start SM-LG Screens -->
       {% if product_full_width_style == "style2" %}
-      <div class="product-image col-sm-5">
-        <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
-      </div>
+        <div class="product-image col-sm-5 hidden-xs">
+          <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
+        </div>
       {% endif %}
-      <div class="product-info col-sm-7">
+      
+      <div class="hidden-xs product-info col-sm-7 {% if product.title == second_pair %}text-right{% endif %}">
         <h3 class="product-name"><a href="{{ product.url | within: collection }}">{{ product.title }}</a> </h3>
         <div class="desc">
           {% if product.metafields.meta.description %}
@@ -61,14 +66,66 @@
       </div>
       
       {% if product_full_width_style != "style2" %}
-      <div class="product-image col-sm-5">
-        <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
-      </div>
+        <div class="product-image col-sm-5 hidden-xs">
+          <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
+        </div>
       {% endif %}
+      <!-- End SM-LG Screens -->
+      
+      <!-- Start XS Screens -->
+      {% if product_full_width_style == "style2" %}
+        <div class="visible-xs product-image col-xs-12 text-center no-pads">
+          <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
+        </div>
+      {% endif %}
+      
+      {% if product_full_width_style != "style2" %}
+        <div class="visible-xs product-image col-xs-12 text-center no-pads">
+          <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
+        </div>
+      {% endif %}
+      
+      <div class="visible-xs product-info col-xs-12 text-center">
+        <h3 class="product-name"><a href="{{ product.url | within: collection }}">{{ product.title }}</a> </h3>
+        <div class="desc">
+          {% if product.metafields.meta.description %}
+          {{ product.metafields.meta.description }}
+          {%else%}
+          {{ product.description  | truncatewords: 80 }}
+          {% endif %}
+        </div>
+        <span class="price">
+          {% if on_sale %}
+          <ins id="ProductPrice">{{product.price | money }}</ins>
+          <del id="ComparePrice">{{product.compare_at_price | money }}</del>
+          {% else %}
+          <ins id="ProductPrice">{{product.price | money }}</ins>
+          {% endif %}
+        </span>
+        {% if sold_out == false %}
+          {% if product.variants.size > 1 %}
+            <a class="addtocart" onclick="location.href='{{ product.url | within: collection }}'">+{{'products.product.select_option' | t | upcase }}</a>
+          {% else %}
+            {% if product.variants.first.available %}
+              <a class="addtocart boutique__add-to-cart" data-pid="{{ product.variants.first.id }}"><span class="pe-7s-cart"></span>+{{'products.product.add_to_cart' | t | upcase }}</a>
+           {% endif %}
+          {% endif %}
+        {% else %}
+          <a class="addtocart" onclick="location.href='{{ product.url | within: collection }}'">+{{'products.product.sold_out' | t | upcase }}</a>
+        {% endif %}
+      </div>
+      <!-- End XS Screens -->
       
     </div>
   </div>
+  
+    {% if shortcode-product-fullwidth == "break" %}
+      <hr class="hidden-xs home-product" />
+    {% endif %}
+  
 </div>
+
+
 <!--End Section single product-->
 {% endif %}
 {% endfor %}
