--- a/snippets/header2.liquid
+++ b/snippets/header2.liquid
@@ -1,37 +1,35 @@
-<div id="box-mobile-menu" class="box-mobile-menu full-height full-width">
+<!-- <div id="box-mobile-menu" class="box-mobile-menu full-height full-width">
 	<div class="box-inner">
 		<span class="close-menu"><span class="icon pe-7s-close"></span></span>
 	</div>
 </div>
-<div id="header-ontop" class="is-sticky"></div>
+<div id="header-ontop" class="is-sticky"></div> -->
 <header id="header" class="header style2">
-  {% include 'shortcode' load: '[shipping-text position="top-header"]'  %}	
-	<div class="main-header">
-		<div class="container">
-			<div class="main-menu-wapper">
-				<div class="row">
-					<div class="col-sm-12 col-md-3 logo-wapper">
-						<div class="logo">
-                          {% if settings.logo_use_image%}
-                          <a href="/">{{'logo.png' | asset_url | img_tag}}</a>
-                          {% else %}
-                          <a href="/"><img src="{{'logo.gif' | asset_url}}" alt=""></a>
-                          {%endif%}
-						</div>
-					</div>
-					<div class="col-sm-12 col-md-9 menu-wapper">
-						<div class="box-control">
-                          {% assign search_style = "icon" %}
-                          {% include 'search-bar' %}
-                          {% assign position ="menu" %}
-                          {% include "mini-cart" %}
-                          {% include"settings-box" %}
-						</div>
-                      	{% include 'menu_import' %}
-						<span class="mobile-navigation"><i class="fa fa-bars"></i></span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="row">
+    <div class="{{margin_shipping_icon}}">
+      <div{{container_shipping_icon}}>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="element-icon style2 no-margin">
+
+              {% if header2 == "Instagram" %}
+                <h2 class="home-collection">Shop Instagram</h2>
+              {% else %}
+                <h1 class="small-caps hidden-xs">Get Yourself a Gift, As You Give the Gift of Vision</h1>
+                <h2 class="small-caps visible-xs">Get Yourself a Gift, As You Give the Gift of Vision</h2>
+
+                <h3 class="hidden-xs small-caps"><span class="u-accent">Free Shipping</span> anywhere in the United States & Canada.</h3>
+                <h5 class="visible-xs small-caps"><span class="u-accent">Free Shipping</span> anywhere in the United States & Canada.</h5>
+
+                <hr class="minor-h-marg" />
+
+                <h2 class="home-collection">Best Sellers</h2>
+              {% endif %}
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </header>
