--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -1,15 +1,182 @@
-
-{% if settings.use_slider_hp10 %}
-<!-- Home slide -->
-<div class="slider-homepage">
-  {% include 'shortcode-slider' %}
-</div>
-<!-- ./Home slide -->
+{% if false %}
+  {% if settings.use_slider_hp10 %}
+  <!-- Home slide -->
+  <div class="slider-homepage">
+    {% include 'shortcode-slider' %}
+  </div>
+  <!-- ./Home slide -->
+  {% endif %}
 {% endif %}
+
+<style>
+  .blue {
+    color: #1fa7d6;
+  }
+  .orange {
+    color: orange;
+  }
+  .maroon {
+    color: maroon;
+  }
+  .purple {
+    color: blueviolet;
+  }
+  .cta-btn {
+    background-color: rgba(31, 167, 214, .75);
+    color: white;
+  }
+</style>
+
+<div class="top-pic banner-hp banner-pic jumbotron col-xs-12 no-margin visible-lg">
+  <div class="row">
+    <div class="col-xs-9 col-xs-offset-1">
+      <h1 class="hidden-xs">We Are All Fellos</h1>
+      <h2 class="visible-xs">We Are All Fellos</h2>
+    </div>
+  </div>
+  <div class="row hidden-xs hidden-sm">
+    <div class="col-sm-4 col-xs-7 col-xs-offset-1">
+      <h2 class="hidden-xs">Fello <span class="orange">Patrons</span></h2>
+      <h3 class="visible-xs">Fello <span class="orange">Patrons</span></h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4 col-xs-7 col-xs-offset-1 hidden-xs hidden-sm">
+      <h2 class="hidden-xs">Fello <span class="purple">Travelers</span></h2>
+      <h3 class="visible-xs">Fello <span class="purple">Travelers</span></h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4 col-xs-7 col-xs-offset-1">
+      <h2 class="hidden-xs">Fello <span class="maroon">Friends</span></h2>
+      <h3 class="visible-xs">Fello <span class="maroon">Friends</span></h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4 col-xs-7 col-xs-offset-1">
+      <h2 class="hidden-xs">Fello <span class="blue">Humanity</span></h2>
+      <h3 class="visible-xs">Fello <span class="blue">Humanity</span></h3>
+    </div>
+  </div>
+  
+  <div class="row">
+    <hr class="col-xs-offset-1 col-sm-4 col-xs-9" />
+  </div>
+
+  <div class="row">
+    <a href="/collections/all"><button class="cta-btn btn btn-lg col-xs-offset-1 col-sm-3 col-xs-6 hidden-xs">Shop Sunglasses & Give Back</button></a>
+    <a href="/collections/all"><button class="cta-btn btn btn-sm col-xs-offset-1 col-sm-3 col-xs-6 visible-xs">Shop Sunglasses & Give Back</button></a>
+  </div>
+</div>
+
+<div class="top-pic banner-hp banner-pic jumbotron col-xs-12 no-margin hidden-lg">
+  <div class="row">
+    <div class="col-xs-6 col-xs-offset-1 no-pads">
+      <h2 class="no-margin">Give the Gift of Vision</h2>
+    </div>
+  </div>
+  <div class="row">
+    <hr class="col-xs-offset-1 col-sm-4 col-xs-9" />
+  </div>
+
+  <div class="row">
+    <a href="/collections/all"><button class="cta-btn btn col-xs-offset-1 col-sm-3 col-xs-6">Shop Sunglasses</button></a>
+  </div>
+</div>
+
+
+<!-- Start Home Page Banner -->
+<!--   <img class="col-xs-6 col-sm-3 no-pads" src="//cdn.shopify.com/s/files/1/1321/8937/t/20/assets/patient_smile_cut.jpg" alt="eye patient smiling">
+
+  <a href="/collections/all#collection-product">
+    <div class="col-xs-6 col-sm-3 banner-text style3 no-pads featured-item banner-border primary no-margin">
+
+      <img src="//cdn.shopify.com/s/files/1/1321/8937/t/20/assets/featured_konvoy.jpg" alt="tortoise konvoy">
+
+      <div class="content-text">
+        <div class="inner">
+          <h2 class="title">The Konvoy</h2>
+
+          <br />
+          <br />
+          <h3 class="subtitle">Shop Now</h3>
+        </div>
+      </div>
+
+    </div>
+  </a>
+
+  <a href="/collections/all#collection-product">
+    <div class="visible-xs col-xs-6 banner-text style3 no-pads featured-item banner-border primary no-margin">
+      <img src="//cdn.shopify.com/s/files/1/1321/8937/t/20/assets/featured_fantom.jpg" alt="tortoise fantom">
+      <div class="content-text">
+        <div class="inner">
+          <h2 class="title">The Fantom</h2>
+
+          <br />
+          <br />
+          <h3 class="subtitle">Shop Now</h3>
+        </div>
+      </div>
+    </div>
+  </a>
+
+  <img class="col-xs-6 col-sm-3 no-pads" src="//cdn.shopify.com/s/files/1/1321/8937/t/20/assets/patient_tool_cut.jpg" alt="evaluating a patient">
+
+  <a href="/collections/all#collection-product">
+    <div class="hidden-xs col-sm-3 banner-text style3 no-pads featured-item banner-border primary no-margin">
+      <img src="//cdn.shopify.com/s/files/1/1321/8937/t/20/assets/featured_fantom.jpg" alt="tortoise fantom">
+      <div class="content-text">
+        <div class="inner">
+          <h2 class="title">The Fantom</h2>
+
+          <br />
+          <br />
+          <h3 class="subtitle">Shop Now</h3>
+        </div>
+      </div>
+    </div>
+  </a> -->
+<!-- End Home Page Banner -->
+
 
 {% if settings.use_banner_carousel_home10 %}
 {% include 'shortcode-banner-slide'  %}
 {% endif %}
+    <div class="no-margin section-pads charity-hp full-w">
+      <div class="row">
+        <h1 class="text-center">Fight Blindness Together</h1>
+      </div>
+
+      <div class="row">
+        <h4 class="hidden-xs col-md-8 col-md-offset-2 minor-h-pads">
+          For every pair of sunglasses sold,
+          Fello donates $5 to VOSH.
+          You can also accompany us in our pursuit to raise awareness and
+          make a difference by contributing <a href="http://www.vosh.org/donate" target="_blank">here</a>.
+        </h4>
+        <p class="visible-xs col-md-8 col-md-offset-2 justify minor-h-pads">
+          For every pair of sunglasses sold,
+          Fello donates $5 to VOSH.
+          You can also accompany us in our pursuit to raise awareness and
+          make a difference by contributing <a href="http://www.vosh.org/donate" target="_blank">here</a>.
+        </p>
+      </div>
+
+      <div class="row row-eq-height hidden-xs">
+        <div class="col-md-3 col-sm-6 col-md-offset-3 v-center">
+          <h1 class="highlight text-right">3014</h1>
+        </div>
+
+        <div class="col-md-3 col-sm-6 v-center">
+          <h1>Lives</h1><h1>Changed</h1>
+        </div>
+      </div>
+      
+      <h1 class="visible-xs text-center"><span class="highlight">3014 </span>&nbsp Lives Changed</h1>
+    </div>
+
+  	{% include 'header2'  %} <!-- Best Sellers Header -->
 
 {% assign check_even_int = 1| plus :0 %}
 {% for i in (1..10) %}
@@ -27,19 +194,87 @@
 
   {% assign include ="" %}
   {% assign product_full_width_handle = settings[handle] %}
-  	{% include 'shortcode-product-fullwidth'  %}
+    {% if i == 1 %}
+  	  {% include 'shortcode-product-fullwidth' with "break"  %}
+    {% else %}
+  	  {% include 'shortcode-product-fullwidth' %}
+    {% endif %}
   {% endif %}
 {% endfor %}
 
-{% if settings.use_brand_home10 %}
-  <div class="container">
-    {% include 'shortcode' load: '[brand top="40"]'  %}
-  </div>
-{% endif %}
-	
-{% if settings.use_shipping_text_home10 %}
-<div class="container">
-  {% assign margin_shipping_icon_9 = "margin-top-40 margin-bottom-30" %}
-  {% include 'shortcode-shipping-icon' %}
+  	{% include 'header2' with "Instagram" %}
+
+{% assign insta_products_top = "
+  Tortoise_Konvoy
+  Black_Konvoy 
+  Black_Fantom  
+  Tortoise_Fantom 
+  Ice_Blue_Heron
+  Dark_Green_Heron 
+" | split: " " %}
+
+{% assign insta_products_bottom = "
+  Ice_Blue_Heron
+  Black_Fantom  
+  Dark_Green_Heron 
+  Tortoise_Fantom 
+  Black_Konvoy 
+  Tortoise_Konvoy 
+" | split: " " %}
+
+{% assign insta-classes = "banner-border primary col-xs-4 col-sm-2 no-pads quick-view" %}
+<div class="row">
+  {% for product in insta_products_top %}
+    {% assign product_handle = product | downcase | split: "_" | join: "-" %}
+    <!-- Can change when handles are changed -->
+    {% case product %}
+    {% when "Ice_Blue_Heron" %}
+      {% assign product_handle = "heron" %}
+    {% when "Black_Fantom" %}
+      {% assign product_handle = "fantom" %}
+    {% when "Black_Konvoy" %}
+      {% assign product_handle = "konvoy" %}
+    {% endcase %}
+    {% assign product_obj = all_products[product_handle] %}
+    <a class="{{ insta-classes }}" href="{{ product_obj.url }}" data-pid="{{ product_obj.id }}">
+      {% assign img_parts = product | split: "_" %}
+      {% assign img_letter_1 = img_parts[0] | slice: 0 %}
+      {% assign img_letter_2 = img_parts[1] | slice: 0 %}
+      {% assign img = img_letter_1 | append: img_letter_2 | append: "_1.jpg" %}
+      <img src="{{ img | asset_url }}" alt="{{ product | split: "_" | join: " " }}">
+    </a>
+  {% endfor %}
 </div>
-{% endif %}
+<div class="row hidden-xs">
+  {% for product in insta_products_bottom %}
+    {% assign product_handle = product | downcase | split: "_" | join: "-" %}
+    <!-- Can change when handles are changed -->
+    {% case product %}
+    {% when "Ice_Blue_Heron" %}
+      {% assign product_handle = "heron" %}
+    {% when "Black_Fantom" %}
+      {% assign product_handle = "fantom" %}
+    {% when "Black_Konvoy" %}
+      {% assign product_handle = "konvoy" %}
+    {% endcase %}
+    {% assign product_obj = all_products[product_handle] %}
+    <a class="{{ insta-classes }}" href="{{ product_obj.url }}" data-pid="{{ product_obj.id }}">
+      {% assign img_parts = product | split: "_" %}
+      {% assign img_letter_1 = img_parts[0] | slice: 0 %}
+      {% assign img_letter_2 = img_parts[1] | slice: 0 %}
+      {% assign img = img_letter_1 | append: img_letter_2 | append: "_2.jpg" %}
+      <img src="{{ img | asset_url }}" alt="{{ product | split: "_" | join: " " }}">
+    </a>
+  {% endfor %}
+</div>
+
+<script>
+  $(document).ready(function() {
+    addEscape();
+  });
+  
+  function addEscape() {
+    $(".btn-modal").attr("data-backdrop", false);
+    $(".with-escape").prepend('<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>');
+  }
+</script>
