--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -20,7 +20,7 @@
 
 <li class="product-item view-grid {{grid_item_width}}">
   <div class="product-inner">
-    <div class="product-thumb has-back-image">
+    <div class="product-thumb has-back-image white-bg">
       
       <a href="{{ product.url | within: collection }}"><img src="{{ product.featured_image.src | img_url: 'grande' }}" alt="{{ product.featured_image.alt | escape }}"></a>
       {% if settings.use_second_img %}
@@ -39,20 +39,27 @@
     </div>
     <div class="product-info">
       <h3 class="product-name"><a href="{{ product.url | within: collection }}">{{ product.title }}</a></h3>
-      <span class="price">
-        {% if on_sale %}
-          <ins>{{product.price | money }}</ins>
-          <del>{{product.compare_at_price | money }}</del>
-        {% else %}
-          <ins>{{product.price | money }}</ins>
-        {% endif %}
-      </span>
+      
+      <p>Polarized</p>
+      
       {% if sold_out == false %}
         <div class="pro-add-to-cart">
           {% if product.variants.size > 1 %}
         		<a class="button select-option" onclick="location.href='{{ product.url | within: collection }}'">{{'products.product.select_option' | t | upcase }}</a>
           {% else %}
         		{% if product.variants.first.available %}
+
+	           <hr />
+          
+                <span class="price">
+                  {% if on_sale %}
+                    <ins>{{product.price | money }}</ins>
+                    <del>{{product.compare_at_price | money }}</del>
+                  {% else %}
+                    <ins>{{product.price | money }}</ins>
+                  {% endif %}
+                </span>
+
           		<a class="button add-to-cart boutique__add-to-cart" data-pid="{{ product.variants.first.id }}">{{'products.product.add_to_cart' | t | upcase }}</a>
               <span class="adding-cart"></span>
         		{% endif %}
